# wdbx_python

./: .cursorignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  config.py  constraints.txt  coverage.xml  database.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  wdbx_tool.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
docs/: CODE_QUALITY.md  CONTRIBUTING.md  DEPLOYMENT.md  ML_INTEGRATION.md  NEXT_STEPS.md  README.md  RESTRUCTURING.md  build_docs.ps1  build_docs.py  cli.rst  conf.py  diagnostics.md  diagnostics_visualization.md  improvements_summary.md  index.html  index.rst  landing.md  linting.md  main.js  monitoring.rst  optimized_vector_operations.md  performance_profiling.md  requirements.txt  styles.css
docs/_static/: custom.css  custom.js  index.html
docs/_templates/: layout.html
docs/api/: client.rst
docs/dashboards/: grafana_wdbx_dashboard.json
docs/plugins/: discord_bot.rst
examples/: legacy_client.py  simple_usage.py
examples/diagnostics_examples/: metrics_dashboard.py  visualization_demo.py
genaisrc/: fix.genai.mts
kubernetes/: deployment.yaml  service.yaml
linting_reports/: linting_report_20250406_204606.html
sample_data/: plugin_demo.py  sample_text.txt
scripts/: README.md  diagnostics_demo.py  fix_discord_bot.py  integrated_linter.py  lint.py  lint_config.py  run_linters.py  simple_lint.py  wdbx_linter.py
scripts/benchmarks/: vector_store_benchmark.py
scripts/fixers/: README.md  final_discord_fix.py  final_fix_discord.py  fix_all_linter_issues.py  fix_cmd_scrape_config.py  fix_cmd_scrape_list.py  fix_cmd_scrape_search.py  fix_cmd_scrape_site.py  fix_cmd_scrape_status.py  fix_cmd_scrape_url.py  fix_discord_bot.py  fix_final_cmd_scrape_search.py  fix_final_cmd_scrape_status.py  fix_final_issues.py  fix_final_style_issues.py  fix_indentation.py  fix_line54.py  fix_line_length.py  fix_line_lengths.py  fix_more_issues.py  fix_remaining_issues.py  fix_specific_lines.py  fix_timestamp_format.py  fix_unterminated_strings.py  fix_update_config_function.py  fix_web_scraper.py  fix_web_scraper_2.py
scripts/linters/: fix_fstrings.py  fix_imports.py  fix_linelength.py  fix_lint.py  fix_unused_vars.py  fix_whitespace.py
scripts/runners/: db_manager.py  metrics_collector.py  run_streamlit.py  run_tests.py  run_wdbx.py
src/wdbx/: __init__.py  __main__.py  cli.py  client.py  config.py  data_structures.py  health.py  mvcc.py  prometheus.py  version.py
src/wdbx/api/: __init__.py  async_api.py  openapi.py  swagger.py
src/wdbx/benchmarks/: benchmark.py  compare.py
src/wdbx/config/: config_manager.py
src/wdbx/core/: __init__.py  config.py  constants.py  data_structures.py  wdbx.py  wdbx_core.py
src/wdbx/examples/: basic_usage.py  cli_demo.sh  client_usage.py  discord_bot_example.py  health_monitoring.py
src/wdbx/ml/: __init__.py  attention.py  backend.py  ml_integration.py  neural_backtracking.py  optimized.py
src/wdbx/monitoring/: __init__.py  benchmarks.py  debugger.py  monitoring_system.py  performance.py
src/wdbx/plugins/: __init__.py  discord_bot.py
src/wdbx/security/: __init__.py  content_filter.py  persona.py  security_manager.py
src/wdbx/server/: __init__.py  cluster.py  http_server.py  service.py
src/wdbx/storage/: __init__.py  blockchain.py  mvcc.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  context.py  test_wdbx.py
tests/imports/: test_imports.py  test_optim_import.py
tests/integration/: test_diagnostics_integration.py  test_query_planner_integration.py
tests/ml/: test_ml_integration.py
tests/test_plugins/: test_model_repo.py  test_visualization.py
tests/unit/: test_blockchain.py  test_cache.py  test_diagnostics.py  test_query_planner.py  test_vector_store.py
wdbx/: __init__.py  attention.py  blockchain.py  cli.py  cluster.py  constants.py  content_filter.py  data_structures.py  monitoring.py  mvcc.py  neural_backtracking.py  optimized.py  performance.py  persona.py  security.py  server.py  service.py  shard_manager.py  terminal_ui.py  vector_store.py  wdbx.py  web_ui.py
wdbx_env/: pyvenv.cfg
wdbx_env/Scripts/: activate  activate.bat
wdbx_plugins/: README.md  __init__.py  discord_bot.py  fix_discord_bot.py  huggingface.py  model_repo.py  ollama.py  openai_api.py  sample_plugin.py  visualization.py  web_scraper.py
(+20 files in other folders)
