[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wdbx"
version = "0.1.0"
description = "WDBX - Vector database and embedding management system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WDBX Team"}
]

[tool.ruff]
# Enable a selection of rules - the same as in our lint_config.py
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PLR",  # pylint refactor suggestions
]
ignore = ["E501"]  # Line length - we handle this with black

# Line length is handled by black
line-length = 100

# Target Python version
target-version = "py39"

# Exclude files and directories
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "*.pyc",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false