[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wdbx"
version = "0.1.0"
description = "WDBX - Vector database and embedding management system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WDBX Team"}
]

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude files and directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.pyc",
    "*.egg-info",
    ".github",
    "docs/_build",
    "site",
    ".pytest_cache",
    ".vscode",
    "data",
    "logs",
    "temp",
    "cache",
    "wdbx_data",
    "wdbx_plugins/__pycache__",
    "wdbx_model_cache",
    "wdbx_visualizations",
    "metrics",
]

# Enable flake8 rules by default
select = ["E", "F", "I", "W", "B", "C4"]

# Ignore line length and other rules handled by Black
ignore = ["E501", "E203"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | \\.env
  | _build
  | buck-out
  | build
  | dist
  | venv
  | __pycache__
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    '^build/',
    '^dist/',
    '^\\.venv/',
    '^\\.git/',
    '^\\.env/',
    '^.+\\.pyi$',
    '^__pycache__/'
]
plugins = [
    'numpy.typing.mypy_plugin',
]
implicit_reexport = false
disallow_any_explicit = false
disallow_any_decorated = false

[[tool.mypy.overrides]]
module = ["numpy.*", "matplotlib.*", "seaborn.*", "tqdm.*", "rich.*", "pytest.*", "pympler.*", "pdbpp.*", "yaml.*", "colorama.*", "plotly.*", "torch.*", "pandas.*", "sklearn.*", "transformers.*", "huggingface_hub.*", "sentence_transformers.*", "faiss.*", "streamlit.*", "umap.*", "discord.*", "aiohttp.*", "requests.*", "beautifulsoup4.*", "lxml.*", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "examples.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unreachable = false